test/src/e2e_vm_tests/test_programs/should_fail/double_underscore_enum/src/main.sw
script;

enum __MyEnum {
    Foo: (),
    Bar: (),
}
fn main() {
}
